# portable-cpu-gpu

./: .gitignore  5900_Results (2) (1).xlsx  CMakeLists.txt  Program3Results.xlsx  README.md  checkSTDversion.cpp  slides.pptx
GOL/: kokkos_gol.cpp
MatrixVectorDot/: kokkos_mpi_cuda_mvdot.cpp  kokkos_mvdot.cpp
Performance-Results/: Book 15 (4).xlsx
Performance-Results/OpenMP_vs_Kokkos_Comparison/: Comparison.md
Pi/: kokkos_pi.cpp
Program1/: CMakeLists.txt  PROGRAM1_Directions.txt  kokkos-threadteams.cpp  kokkos_mvdot.cpp  serial.cpp  serial2.cpp
Program2/: CMakeLists.txt  kokkos_gol.cpp  results.csv  serial_gol.cpp
Program3/: CMakeLists.txt  mc_pi_kokkos.cpp  mc_pi_openmp.cpp  pi_kokkos.cpp  pi_omp.cpp  pi_serial.cpp
Program4/: CMakeLists.txt  finaltest.cpp  mergesort.cpp  tempCudaConvert.cpp
RAJA/: BUILDING_RAJA.md
gol/: CMakeLists.txt  kokkosGOL.cpp  serialGOL.cpp
gol/READMEs/: serialgol.md
kokkos/: CMakeLists.txt  kokkos_base_template.cpp  kokkos_sort.cpp  measuring_performance_in_cpp.md
kokkos/cmake/: CreateKokkosTarget.cmake  KokkosTargetNames.cmake
matrix-vector_matrix-matrix/: CMakeLists.txt  matrix-vector-mult.cpp  mvmult.cpp
mojo/: README_MOJO.md  mojo-add.mojo  mojo-call-python.mojo  mojo-gpu.mojo  python-call-mojo-add.py
nvidia-cuda/: README.md  cuda-device-query.cu  hello-cuda.cu  nvidia-smi-options.txt
rocm-hip/: README.md  hello-hip-rocm.cpp  hip-device-query.cpp  hip-vec-add.cpp  rocm-smi-options.txt
useful_util/: checkOpenMP_version.txt  checkstdversion.cpp  cpu_vs_gpu.md  learningteams.cpp
